update preprocess directories and some files structure

--- a/preprocess/preprocess_and_data_exploration.ipynb
+++ b/preprocess/preprocess_and_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "bb8bfe5e",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pydicom\n",
-      "  Downloading pydicom-2.3.1-py3-none-any.whl (2.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m28.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pydicom\n",
-      "Successfully installed pydicom-2.3.1\n",
+      "Requirement already satisfied: pydicom in /usr/local/lib/python3.8/dist-packages (2.3.1)\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.1\u001b[0m\n",
@@ -25,11 +21,7 @@
       "\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.1\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n",
-      "Collecting lxml\n",
-      "  Downloading lxml-4.9.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (7.1 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m50.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: lxml\n",
-      "Successfully installed lxml-4.9.2\n",
+      "Requirement already satisfied: lxml in /usr/local/lib/python3.8/dist-packages (4.9.2)\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.1\u001b[0m\n",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9489b164",
    "metadata": {},
    "outputs": [],
@@ -65,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "294956f3",
    "metadata": {},
    "outputs": [],
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "d4290a5b",
    "metadata": {},
    "outputs": [
@@ -115,7 +107,7 @@
    ],
    "source": [
     "ROOT_DIR_DDSM=\"/tf/data/CBIS-DDSM\"\n",
-    "OUTPUT_DIR_DDSM=\"/tf/data/CBIS-DDSM/png_images\"\n",
+    "OUTPUT_DIR_DDSM=\"/tf/data/Mammographies/CBIS-DDSM\"\n",
     "\n",
     "os.makedirs(OUTPUT_DIR_DDSM, exist_ok=True)\n",
     "\n",
@@ -130,7 +122,7 @@
     "\n",
     "            # If the word \"full\" is in the path, it means that it's the complete mammography\n",
     "            if \"full\" in file_path:\n",
-    "                new_name = patient_id + \"_FULL\" + \".png\"\n",
+    "                new_name = patient_id + \".png\"\n",
     "            else:\n",
     "                num_colors = len(np.unique(image).tolist())\n",
     "                if num_colors == 2:\n",
@@ -152,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "id": "6a58aabe",
    "metadata": {},
    "outputs": [],
@@ -188,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "id": "6b2a3514",
    "metadata": {},
    "outputs": [
@@ -202,7 +194,6 @@
    ],
    "source": [
     "from collections import defaultdict\n",
-    "OUTPUT_DDSM_JSON=\"/tf/data/CBIS-DDSM/\"\n",
     "\n",
     "rois_coordinates=defaultdict(lambda: [])\n",
     "\n",
@@ -218,7 +209,7 @@
     "            rois_coordinates[key].append(info)\n",
     "        print(i,flush=True,end=\"\\r\")\n",
     "\n",
-    "with open(os.path.join(OUTPUT_DDSM_JSON, \"roi_images.json\"), 'w') as fp:\n",
+    "with open(os.path.join(OUTPUT_DIR_DDSM, \"roi_images.json\"), 'w') as fp:\n",
     "    json.dump(rois_coordinates, fp)"
    ]
   },
@@ -266,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "edbba5ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "ROOT_DIR_MIAS=\"/tf/data/MIAS/all-mias\"\n",
-    "OUTPUT_DIR_MIAS=\"/tf/data/MIAS/all-mias-png\"\n",
+    "OUTPUT_DIR_MIAS=\"/tf/data/Mammographies/MIAS\"\n",
     "\n",
     "os.makedirs(OUTPUT_DIR_MIAS, exist_ok=True)\n",
     "\n",
@@ -293,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "b6ab4f6f",
    "metadata": {},
    "outputs": [],
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "id": "b718bb3e",
    "metadata": {},
    "outputs": [],
@@ -312,7 +303,6 @@
     "import csv\n",
     "\n",
     "INPUT_MIAS_INFO=\"/tf/data/MIAS/Info.txt\"\n",
-    "OUTPUT_MIAS_JSON=\"/tf/data/MIAS\"\n",
     "\n",
     "rois_coordinates=defaultdict(lambda: [])\n",
     "\n",
@@ -331,7 +321,7 @@
     "            key=row[0]\n",
     "            rois_coordinates[key].append(info)\n",
     "            \n",
-    "with open(os.path.join(OUTPUT_MIAS_JSON, \"roi_images.json\"), 'w') as fp:\n",
+    "with open(os.path.join(OUTPUT_DIR_MIAS, \"roi_images.json\"), 'w') as fp:\n",
     "    json.dump(rois_coordinates, fp)"
    ]
   },
@@ -362,13 +352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4d8c3392",
    "metadata": {},
    "outputs": [],
    "source": [
     "ROOT_DIR_INBREAST=\"/tf/data/INbreast/AllDICOMs\"\n",
-    "OUTPUT_DIR_INBREAST=\"/tf/data/INbreast/AllPNGs\"\n",
+    "OUTPUT_DIR_INBREAST=\"/tf/data/Mammographies/INBreast\"\n",
     "\n",
     "os.makedirs(OUTPUT_DIR_INBREAST, exist_ok=True)\n",
     "\n",
@@ -377,7 +367,8 @@
     "    if file.endswith(\".dcm\"):\n",
     "        img = pydicom.dcmread(os.path.join(ROOT_DIR_INBREAST,file)).pixel_array\n",
     "        norm_img=normalize_image(img)\n",
-    "        cv2.imwrite(os.path.join(OUTPUT_DIR_INBREAST, file)[:-4]+\".png\",norm_img)"
+    "        name=file.split(\"_\")[0]+\".png\"\n",
+    "        cv2.imwrite(os.path.join(OUTPUT_DIR_INBREAST, name),norm_img)"
    ]
   },
   {
@@ -390,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 11,
    "id": "e3353303",
    "metadata": {},
    "outputs": [],
@@ -429,13 +420,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 12,
    "id": "46808cf5",
    "metadata": {},
    "outputs": [],
    "source": [
     "ROOT_INBREAST_XML=\"/tf/data/INbreast/AllXML\"\n",
-    "OUTPUT_INBREAST_JSON=\"/tf/data/INbreast\"\n",
     "\n",
     "info_images=[]\n",
     "for file in os.listdir(ROOT_INBREAST_XML):\n",
@@ -445,10 +435,7 @@
     "        soup = BeautifulSoup(data, 'xml') \n",
     "        info_dict = xml_to_dict(soup)\n",
     "        info_dict[\"id\"]=file[0:-4]\n",
-    "        info_images.append(info_dict)\n",
-    "        \n",
-    "with open(os.path.join(OUTPUT_INBREAST_JSON, \"all_images_info.json\"), 'w') as fp:\n",
-    "    json.dump(info_images, fp)\n"
+    "        info_images.append(info_dict)"
    ]
   },
   {
@@ -461,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "id": "601b4792",
    "metadata": {},
    "outputs": [
@@ -607,20 +594,18 @@
        " 'id': '50998413'}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(os.path.join(OUTPUT_INBREAST_JSON, \"all_images_info.json\"), 'r') as fp:\n",
-    "    data=json.load(fp)\n",
-    "data[0]"
+    "info_images[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "id": "31f8cbd4",
    "metadata": {},
    "outputs": [],
@@ -639,22 +624,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "id": "168e8139",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rois_coordinates=defaultdict(lambda: [])\n",
-    "\n",
-    "with open(os.path.join(OUTPUT_INBREAST_JSON, \"all_images_info.json\"), 'r') as fp:\n",
-    "    data=json.load(fp)\n",
-    "    for mammography_info in data:\n",
-    "        for roi in mammography_info[\"ROIs\"]:\n",
-    "            roi_rectangle = generate_roi_from_coordinates_list(roi[\"Point_px\"])\n",
-    "            info = generate_info_dict(roi[\"Name\"], roi_rectangle)\n",
-    "            rois_coordinates[mammography_info[\"id\"]].append(info)\n",
+    "rois_coordinates=defaultdict(list)\n",
+    "for mammography_info in info_images:\n",
+    "    for roi in mammography_info[\"ROIs\"]:\n",
+    "        roi_rectangle = generate_roi_from_coordinates_list(roi[\"Point_px\"])\n",
+    "        info = generate_info_dict(roi[\"Name\"], roi_rectangle)\n",
+    "        rois_coordinates[mammography_info[\"id\"]].append(info)\n",
     "        \n",
-    "with open(os.path.join(OUTPUT_INBREAST_JSON, \"roi_images.json\"), 'w') as fp:\n",
+    "with open(os.path.join(OUTPUT_DIR_INBREAST, \"roi_images.json\"), 'w') as fp:\n",
     "    json.dump(rois_coordinates, fp)         "
    ]
   },
@@ -668,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "id": "167b0ec1",
    "metadata": {},
    "outputs": [
@@ -692,7 +674,7 @@
        "             'Espiculated Region': 1})"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "id": "fe8578e0",
    "metadata": {},
    "outputs": [
