--- a/preprocess/preprocess_and_data_exploration.ipynb
+++ b/preprocess/preprocess_and_data_exploration.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "9489b164",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,9 @@
     "import numpy as np\n",
     "import xml.etree.ElementTree as ET\n",
     "from bs4 import BeautifulSoup\n",
-    "import json"
+    "import json\n",
+    "import csv\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -93,6 +95,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "5f048e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_DIR_DDSM=\"/tf/data/CBIS-DDSM\"\n",
+    "OUTPUT_DIR_DDSM=\"/tf/data/Mammographies/CBIS-DDSM\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "d4290a5b",
    "metadata": {},
@@ -106,9 +119,6 @@
     }
    ],
    "source": [
-    "ROOT_DIR_DDSM=\"/tf/data/CBIS-DDSM\"\n",
-    "OUTPUT_DIR_DDSM=\"/tf/data/Mammographies/CBIS-DDSM\"\n",
-    "\n",
     "os.makedirs(OUTPUT_DIR_DDSM, exist_ok=True)\n",
     "\n",
     "count=0\n",
@@ -143,8 +153,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77327ec5",
+   "metadata": {},
+   "source": [
+    "First, data from csv are collected. This info will be used for classification."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
+   "id": "646ed681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_CBIS_DDSM_INFO = [\n",
+    "    \"/tf/data/CBIS-DDSM/mass_case_description_train_set.csv\",\n",
+    "    \"/tf/data/CBIS-DDSM/mass_case_description_test_set.csv\",\n",
+    "    \"/tf/data/CBIS-DDSM/calc_case_description_train_set.csv\",\n",
+    "    \"/tf/data/CBIS-DDSM/calc_case_description_test_set.csv\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2eb617fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_2_type= {'CIRC': \"Mass\",\n",
+    "              'MISC': \"Unknown\",\n",
+    "              'ASYM': \"Assymetry\",\n",
+    "              'ARCH': \"Distortion\",\n",
+    "              'SPIC': \"Spiculated Region\",\n",
+    "              'CALC': \"Calcification\",\n",
+    "              'Calcification': \"Calcification\",\n",
+    "              'Spiculated Region': \"Spiculated Region\",\n",
+    "              'Mass': \"Mass\",\n",
+    "              'Cluster': \"Cluster\",\n",
+    "              'Assymetry': \"Assymetry\",\n",
+    "              'Asymmetry': \"Assymetry\",\n",
+    "              'Distortion': \"Distortion\",\n",
+    "              'Calcifications': \"Calcification\",\n",
+    "              'Unnamed': \"Unknown\",\n",
+    "              'Point 3': \"Unknown\",\n",
+    "              'Point 1': \"Unknown\",\n",
+    "              'Spiculated region': \"Spiculated Region\",\n",
+    "              '': \"Unknown\",\n",
+    "              'Calc': \"Calcification\",\n",
+    "              'Espiculated Region': \"Spiculated Region\"}\n",
+    "\n",
+    "pathology_2_pathology = {\"BENIGN\": \"B\",\n",
+    "                         \"BENIGN_WITHOUT_CALLBACK\": \"B\",\n",
+    "                         \"MALIGNANT\": \"M\",\n",
+    "                         \"B\": \"B\",\n",
+    "                         \"M\": \"M\"\n",
+    "                        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "60732b21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abnormalities_info={}\n",
+    "\n",
+    "for file in INPUT_CBIS_DDSM_INFO:\n",
+    "    with open(file, 'r') as csvfile:\n",
+    "        csv_container = csv.reader(csvfile, delimiter=',')\n",
+    "        header = next(csv_container)\n",
+    "        for row in csv_container: \n",
+    "            key = row[-1].split(\"/\")[0]+\"_MASK\"\n",
+    "            abnormalities_info[key]={\"BI-RADS\": int(row[10]), \"pathology\": pathology_2_pathology[row[9]]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1916915",
+   "metadata": {},
+   "source": [
+    "Then, images, ROI coordinates are added with the previous info about each abnormality in a single dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "6a58aabe",
    "metadata": {},
    "outputs": [],
@@ -174,13 +270,20 @@
     "def generate_key_and_type(filename):\n",
     "    return file[:find_nth_last(file,\"_\",1)], file.split(\"-\")[0]\n",
     "\n",
-    "def generate_info_dict(type_abnormality, roi):\n",
-    "    return {\"type\": type_abnormality, \"x\":roi[0], \"y\":roi[1], \"w\":roi[2], \"h\":roi[3]}\n"
+    "def generate_info_dict(type_abnormality, roi, pathology, birads):\n",
+    "    return {\"type\": type_2_type[type_abnormality],\n",
+    "            \"x\":roi[0],\n",
+    "            \"y\":roi[1],\n",
+    "            \"w\":roi[2],\n",
+    "            \"h\":roi[3],\n",
+    "            \"pathology\": pathology_2_pathology[pathology],\n",
+    "            \"BI-RADS\": birads\n",
+    "           }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "6b2a3514",
    "metadata": {},
    "outputs": [
@@ -188,27 +291,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6670\r"
+      "3567\r"
      ]
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "rois_coordinates=defaultdict(lambda: [])\n",
+    "rois_coordinates=defaultdict(list)\n",
     "\n",
     "for (path, _, files) in os.walk(OUTPUT_DIR_DDSM, topdown=False):\n",
-    "    for i, file in enumerate(files):\n",
+    "    for file in files:\n",
     "        if \"MASK\" in file:\n",
     "            file_path = os.path.join(path, file)\n",
     "            key, type_abnormality = generate_key_and_type(file)\n",
     "            roi=get_roi_area(file_path)\n",
+    "            info_file = abnormalities_info[file[:-4]]\n",
+    "            info = generate_info_dict(type_abnormality, roi, info_file[\"pathology\"], info_file[\"BI-RADS\"])\n",
     "            \n",
-    "            info = generate_info_dict(type_abnormality, roi)\n",
-    "            \n",
-    "            rois_coordinates[key].append(info)\n",
-    "        print(i,flush=True,end=\"\\r\")\n",
-    "\n",
+    "            rois_coordinates[key].append(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "81f640ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(os.path.join(OUTPUT_DIR_DDSM, \"roi_images.json\"), 'w') as fp:\n",
     "    json.dump(rois_coordinates, fp)"
    ]
@@ -257,14 +365,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "60a5dd9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_DIR_MIAS=\"/tf/data/MIAS/all-mias\"\n",
+    "OUTPUT_DIR_MIAS=\"/tf/data/Mammographies/MIAS\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "edbba5ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT_DIR_MIAS=\"/tf/data/MIAS/all-mias\"\n",
-    "OUTPUT_DIR_MIAS=\"/tf/data/Mammographies/MIAS\"\n",
-    "\n",
     "os.makedirs(OUTPUT_DIR_MIAS, exist_ok=True)\n",
     "\n",
     "for file in os.listdir(ROOT_DIR_MIAS):\n",
@@ -284,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "b6ab4f6f",
    "metadata": {},
    "outputs": [],
@@ -295,16 +411,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 86,
    "id": "b718bb3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "\n",
     "INPUT_MIAS_INFO=\"/tf/data/MIAS/Info.txt\"\n",
     "\n",
-    "rois_coordinates=defaultdict(lambda: [])\n",
+    "bm_2_birads = {\n",
+    "    \"B\": \"2\",\n",
+    "    \"M\": \"4a\"\n",
+    "}\n",
+    "\n",
+    "rois_coordinates=defaultdict(list)\n",
     "\n",
     "with open(INPUT_MIAS_INFO, 'r') as csvfile:\n",
     "    csv_container = csv.reader(csvfile, delimiter=' ')\n",
@@ -317,10 +436,18 @@
     "            diam=float(row[-1])\n",
     "            \n",
     "            roi=generate_roi_from_circle(x_center,y_center,diam)\n",
-    "            info = generate_info_dict(type_abnormality, roi)\n",
+    "            info = generate_info_dict(type_abnormality, roi, row[3], bm_2_birads[row[3]])\n",
     "            key=row[0]\n",
-    "            rois_coordinates[key].append(info)\n",
-    "            \n",
+    "            rois_coordinates[key].append(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "91908a3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(os.path.join(OUTPUT_DIR_MIAS, \"roi_images.json\"), 'w') as fp:\n",
     "    json.dump(rois_coordinates, fp)"
    ]
@@ -352,14 +479,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "07f40d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_DIR_INBREAST=\"/tf/data/INbreast/AllDICOMs\"\n",
+    "INPUT_INBREAST_INFO=\"/tf/data/INbreast/INbreast.csv\"\n",
+    "OUTPUT_DIR_INBREAST=\"/tf/data/Mammographies/INBreast\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "4d8c3392",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT_DIR_INBREAST=\"/tf/data/INbreast/AllDICOMs\"\n",
-    "OUTPUT_DIR_INBREAST=\"/tf/data/Mammographies/INBreast\"\n",
-    "\n",
     "os.makedirs(OUTPUT_DIR_INBREAST, exist_ok=True)\n",
     "\n",
     "inbreast_images = []\n",
@@ -381,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "e3353303",
    "metadata": {},
    "outputs": [],
@@ -420,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "46808cf5",
    "metadata": {},
    "outputs": [],
@@ -443,12 +579,12 @@
    "id": "177d8bf1",
    "metadata": {},
    "source": [
-    "Some of the ROIs are to small (Area is 0.0, which means it's so small, and only has one point to mark the abnormality). A default zone is created, centered on the provided coordinates, with a size of 5x5 pixels in the final json file."
+    "Some of the ROIs are to small (Area is 0.0, which means it's so small, and only has one point to mark the abnormality). A default zone is created, centered on the provided coordinates, with a size of 5x5 pixels in the final json file or adjust the area that fits in the image shape."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "id": "601b4792",
    "metadata": {},
    "outputs": [
@@ -594,7 +730,7 @@
        " 'id': '50998413'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,12 +741,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
+   "id": "d5e44fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_2_size = {}\n",
+    "\n",
+    "for (path, _, files) in os.walk(OUTPUT_DIR_INBREAST, topdown=False):\n",
+    "    for file in files:\n",
+    "        if file.endswith(\".png\"):\n",
+    "            file_path = os.path.join(path, file)\n",
+    "            image = cv2.imread(file_path)\n",
+    "            image_2_size[file[:-4]] = image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "fe9a75ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_box_inside_image(box, image_shape):\n",
+    "    diff_x = box[0] + box[2] - image_shape[1]\n",
+    "    diff_y = box[1] + box[3] - image_shape[0]\n",
+    "    \n",
+    "    if diff_x > 0:\n",
+    "        box[0] = image_shape[1] - box[2]\n",
+    "    if diff_y > 0:\n",
+    "        box[1] = image_shape[0] - box[3]\n",
+    "    if box[0] < 0:\n",
+    "        x = 0\n",
+    "    if box[1] < 0:\n",
+    "        y = 0\n",
+    "        \n",
+    "    return [box[0], box[1], box[2], box[3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "id": "31f8cbd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_roi_from_coordinates_list(coords):\n",
+    "def generate_roi_from_coordinates_list(coords, image_shape):\n",
     "    min_x = np.min([float(i[\"x\"]) for i in coords])\n",
     "    max_x = np.max([float(i[\"x\"]) for i in coords])\n",
     "    min_y = np.min([float(i[\"y\"]) for i in coords])\n",
@@ -619,25 +795,78 @@
     "    h = int(max_y - min_y)\n",
     "    w = 5 if w==0 else w\n",
     "    h = 5 if h==0 else h\n",
-    "    return int(min_x), int(min_y), w, h"
+    "    return check_box_inside_image([int(min_x), int(min_y), w, h], image_shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a28633e",
+   "metadata": {},
+   "source": [
+    "We need to read the info from the csv to added in the final dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
+   "id": "993f42f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "birads_2_bm = {\"1\": \"B\",\n",
+    "               \"2\": \"B\",\n",
+    "               \"3\": \"B\",\n",
+    "               \"4a\":\"B\",\n",
+    "               \"4b\":\"B\",\n",
+    "               \"4c\":\"M\",\n",
+    "               \"5\":\"M\",\n",
+    "               \"6\":\"M\",\n",
+    "              }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "184e2edf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abnormalities_info={}\n",
+    "\n",
+    "with open(INPUT_INBREAST_INFO, 'r') as csvfile:\n",
+    "    csv_container = csv.reader(csvfile, delimiter=';')\n",
+    "    header = next(csv_container)\n",
+    "    for row in csv_container: \n",
+    "        key = row[5]\n",
+    "        abnormalities_info[key]={\"BI-RADS\": row[7], \"pathology\": pathology_2_pathology[birads_2_bm[row[7]]]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "id": "168e8139",
    "metadata": {},
    "outputs": [],
    "source": [
     "rois_coordinates=defaultdict(list)\n",
+    "\n",
     "for mammography_info in info_images:\n",
     "    for roi in mammography_info[\"ROIs\"]:\n",
-    "        roi_rectangle = generate_roi_from_coordinates_list(roi[\"Point_px\"])\n",
-    "        info = generate_info_dict(roi[\"Name\"], roi_rectangle)\n",
-    "        rois_coordinates[mammography_info[\"id\"]].append(info)\n",
-    "        \n",
+    "        roi_rectangle = generate_roi_from_coordinates_list(roi[\"Point_px\"], image_2_size[mammography_info[\"id\"]])\n",
+    "        info_file = abnormalities_info[mammography_info[\"id\"]]\n",
+    "        info = generate_info_dict(roi[\"Name\"], roi_rectangle, info_file[\"pathology\"], info_file[\"BI-RADS\"])\n",
+    "        rois_coordinates[mammography_info[\"id\"]].append(info)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eae53ab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(os.path.join(OUTPUT_DIR_INBREAST, \"roi_images.json\"), 'w') as fp:\n",
-    "    json.dump(rois_coordinates, fp)         "
+    "    json.dump(rois_coordinates, fp)   "
    ]
   },
   {
@@ -650,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "id": "167b0ec1",
    "metadata": {},
    "outputs": [
@@ -658,23 +887,16 @@
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {'Calcification': 7142,\n",
-       "             'Spiculated Region': 14,\n",
+       "            {'Calcification': 7143,\n",
+       "             'Spiculated Region': 16,\n",
        "             'Mass': 116,\n",
        "             'Cluster': 27,\n",
-       "             'Assymetry': 1,\n",
-       "             'Asymmetry': 5,\n",
+       "             'Assymetry': 6,\n",
        "             'Distortion': 3,\n",
-       "             'Calcifications': 1,\n",
-       "             'Unnamed': 2,\n",
-       "             'Point 3': 1,\n",
-       "             'Point 1': 1,\n",
-       "             'Spiculated region': 1,\n",
-       "             '': 1,\n",
-       "             'Espiculated Region': 1})"
+       "             'Unknown': 5})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "id": "fe8578e0",
    "metadata": {},
    "outputs": [
@@ -710,15 +932,8 @@
       "Mass found in image 50998981 in coords 2070, 1112, and size 190x193\n",
       "Cluster found in image 22579916 in coords 745, 1568, and size 164x166\n",
       "Assymetry found in image 24065461 in coords 2175, 1825, and size 1045x994\n",
-      "Asymmetry found in image 22580576 in coords 308, 890, and size 712x696\n",
       "Distortion found in image 50998634 in coords 204, 1316, and size 508x452\n",
-      "Calcifications found in image 51070197 in coords 2325, 1959, and size 71x49\n",
-      "Unnamed found in image 20587174 in coords 277, 1794, and size 12x13\n",
-      "Point 3 found in image 22613822 in coords 2792, 368, and size 5x5\n",
-      "Point 1 found in image 22580341 in coords 2301, 2063, and size 5x5\n",
-      "Spiculated region found in image 22670147 in coords 2340, 1093, and size 600x474\n",
-      " found in image 22670511 in coords 569, 727, and size 5x5\n",
-      "Espiculated Region found in image 24055355 in coords 447, 1257, and size 767x625\n"
+      "Unknown found in image 20587174 in coords 277, 1794, and size 12x13\n"
      ]
     }
    ],
