Create json info data for mias with y flip as it is sais in docs

--- a/preprocess/preprocess_and_data_exploration.ipynb
+++ b/preprocess/preprocess_and_data_exploration.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "9489b164",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "2eb617fb",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "6a58aabe",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
     "        - B: Benign\n",
     "        - M: Malignant\n",
     "    - X Coordinate of center of abnomality\n",
-    "    - Y Coordinate of center of abnomality\n",
+    "    - Y Coordinate of center of abnomality (<b>ATTENTION</b>! The system coordinates has its origin in the bottom-left corner. This coordinate should be recalculated)\n",
     "    - Radius size (in pixels) of abnormality\n",
     "    \n",
     "    \n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "60a5dd9e",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "b6ab4f6f",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "id": "b718bb3e",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
     "        type_abnormality=row[2]\n",
     "        if type_abnormality != \"NORM\" and len(row)>5:\n",
     "            x_center=float(row[-3])\n",
-    "            y_center=float(row[-2])\n",
+    "            y_center=float(row[-2])-1024 # this is the height of all images, this move the origin\n",
     "            diam=float(row[-1])\n",
     "            \n",
     "            roi=generate_roi_from_circle(x_center,y_center,diam)\n",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "id": "91908a3d",
    "metadata": {},
    "outputs": [],
