Added margin when creating ROI of MIAS and correct Y axis coordinate

--- a/preprocess/preprocess_and_data_exploration.ipynb
+++ b/preprocess/preprocess_and_data_exploration.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9489b164",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "294956f3",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "646ed681",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "2eb617fb",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "60a5dd9e",
    "metadata": {},
    "outputs": [],
@@ -400,18 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "b6ab4f6f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_roi_from_circle(x_center, y_center, diam):\n",
-    "    return [x_center-diam/2, y_center-diam/2, diam, diam]"
+    "    return [\n",
+    "        x_center-diam if x_center-diam >0 else x_center-diam/2,\n",
+    "        y_center-diam if y_center-diam >0 else y_center-diam/2,\n",
+    "        diam + int(diam/2) if x_center+diam + int(diam/2) < 1024 else diam,\n",
+    "        diam + int(diam/2) if y_center+diam + int(diam/2) < 1024 else diam,\n",
+    "    ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "b718bb3e",
    "metadata": {},
    "outputs": [],
@@ -432,7 +437,7 @@
     "        type_abnormality=row[2]\n",
     "        if type_abnormality != \"NORM\" and len(row)>5:\n",
     "            x_center=float(row[-3])\n",
-    "            y_center=float(row[-2])-1024 # this is the height of all images, this move the origin\n",
+    "            y_center=1024-float(row[-2]) # this is the height of all images, this move the origin\n",
     "            diam=float(row[-1])\n",
     "            \n",
     "            roi=generate_roi_from_circle(x_center,y_center,diam)\n",
@@ -443,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "91908a3d",
    "metadata": {},
    "outputs": [],
