Get different types of abnormalities with its labesl

--- a/generate_data/generate_yolo_data.ipynb
+++ b/generate_data/generate_yolo_data.ipynb
@@ -17,8 +17,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-08 01:02:23.558024: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-19 10:32:48.547495: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detectron2 not imported\n"
      ]
     }
    ],
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7450,7 +7457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7484,6 +7491,92 @@
     "    os.makedirs(get_class_yolo_dir(type_set, label), exist_ok=True)\n",
     "    counter_labels[label] +=1\n",
     "    cv2.imwrite(f\"{os.path.join(get_class_yolo_dir(type_set, label), str(counter_labels[label])+'.png')}\", image)\n",
+    "    print(counter, end=\"\\r\", flush=True)\n",
+    "    counter+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7435\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 10:36:15.061443: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 22254336 exceeds 10% of free system memory.\n",
+      "2023-05-19 10:36:15.250724: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 26865856 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7438\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 10:36:15.876536: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 23429120 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7441\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 10:36:16.162340: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 19527552 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7446\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 10:36:16.664280: W tensorflow/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 27415726 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11002\r"
+     ]
+    }
+   ],
+   "source": [
+    "CLASS_YOLO_BASE_DIR=\"/kaggle/working/yolo_data/abnormality_classification\"\n",
+    "\n",
+    "class_gen = loader.classification_generator(output_size=(400,400), classify_types=True)\n",
+    "\n",
+    "counter_types = defaultdict(int)\n",
+    "counter=0\n",
+    "for image, type in class_gen():\n",
+    "    type_set = np.random.choice([\"train\", \"val\", \"test\"], p=[0.7, 0.2, 0.1])\n",
+    "    os.makedirs(get_class_yolo_dir(type_set, type), exist_ok=True)\n",
+    "    counter_types[type] +=1\n",
+    "    cv2.imwrite(f\"{os.path.join(get_class_yolo_dir(type_set, type), str(counter_types[type])+'.png')}\", image)\n",
     "    print(counter, end=\"\\r\", flush=True)\n",
     "    counter+=1"
    ]
