Update loading last model in vit notebooks

--- a/vit-classification/vit_classification-hugging-face.ipynb
+++ b/vit-classification/vit_classification-hugging-face.ipynb
@@ -283,7 +283,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -897,7 +896,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -958,11 +956,11 @@
    },
    "outputs": [],
    "source": [
-    "model.save_pretrained(f'./vit_class_{checkpoint.replace(\"/\",\"_\")}_{datetime.now().strftime(\"%d%m%Y_%H%M%S\")}')"
+    "model_name=f'./vit_class_{checkpoint.replace(\"/\",\"_\")}_{datetime.now().strftime(\"%d%m%Y_%H%M%S\")}'\n",
+    "model.save_pretrained(model_name)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1003,9 +1001,9 @@
     }
    ],
    "source": [
-    "if not model:\n",
+    "if 'model_name' not in globals():\n",
     "    model = AutoModelForImageClassification.from_pretrained(\n",
-    "        checkpoint,\n",
+    "        \"./vit_class_google_vit-base-patch16-224-in21k_11052023_232340\",\n",
     "        num_labels=len(labels),\n",
     "        id2label=id2label,\n",
     "        label2id=label2id,\n",
@@ -1045,7 +1043,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
