--- a/YOLOv8/object_detector/yolo_v8_object_detector.ipynb
+++ b/YOLOv8/object_detector/yolo_v8_object_detector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-03T15:53:49.345145Z",
@@ -13,16 +13,6 @@
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33medcogue\u001b[0m (\u001b[33medcogue2207\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -38,9 +28,11 @@
     "from IPython.display import Image, clear_output  # to display images\n",
     "from hyperopt import fmin, tpe, hp, Trials, space_eval\n",
     "from ultralytics import YOLO\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
     "#wandb_api_key = user_secrets.get_secret(\"wandb_key\")\n",
     "#wandb.login(key=wandb_api_key)\n",
-    "wandb.login(key=\"6227e72bb3b48dc12a4035210349fec6a2b3637b\")\n",
+    "#wandb.login(key=\"6227e72bb3b48dc12a4035210349fec6a2b3637b\")\n",
     "\n",
     "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
    ]
@@ -17440,95 +17432,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /tf/code/YOLOv8/object_detector/test.png: 128x128 (no detections), 3.9ms\n",
-      "Speed: 0.5ms preprocess, 3.9ms inference, 0.4ms postprocess per image at shape (1, 3, 128, 128)\n",
-      "Results saved to \u001b[1mruns/detect/predict9\u001b[0m\n"
+      "0: 128x128 1 Abnormalities, 29.3ms\n",
+      "Speed: 16.6ms preprocess, 29.3ms inference, 5.9ms postprocess per image at shape (1, 3, 128, 128)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[ultralytics.yolo.engine.results.Results object with attributes:\n",
-       " \n",
-       " boxes: ultralytics.yolo.engine.results.Boxes object\n",
-       " keypoints: None\n",
-       " keys: ['boxes']\n",
-       " masks: None\n",
-       " names: {0: 'Abnormalities'}\n",
-       " orig_img: array([[[13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         ...,\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13]],\n",
-       " \n",
-       "        [[13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         ...,\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13]],\n",
-       " \n",
-       "        [[13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         ...,\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13]],\n",
-       " \n",
-       "        ...,\n",
-       " \n",
-       "        [[13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         ...,\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13]],\n",
-       " \n",
-       "        [[13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         ...,\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13]],\n",
-       " \n",
-       "        [[13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         ...,\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13],\n",
-       "         [13, 13, 13]]], dtype=uint8)\n",
-       " orig_shape: (1600, 1600)\n",
-       " path: '/tf/code/YOLOv8/object_detector/test.png'\n",
-       " probs: None\n",
-       " speed: {'preprocess': 0.5412101745605469, 'inference': 3.9222240447998047, 'postprocess': 0.4048347473144531}]"
+       "[[0.0, 0.0, 1600.0, 1600.0, 0.388414204120636, 0.0]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = YOLO('./runs/detect/train2/weights/best.pt')\n",
-    "results=model(\"test.png\",save=True) #Saved on runs/detect/predict\n",
-    "results"
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "image=Image.open(f\"/tf/data/Mammographies/yolo_data/object_detection/train/images/Calc-Test_P_01635_RIGHT_CC.png\").convert(\"RGB\")\n",
+    "results=model(image)[0] #Saved on runs/detect/predict\n",
+    "results.boxes.data.tolist()"
    ]
   }
  ],
