--- a/YOLOv8/abnormalities_type_classificator/yolo_v8_abnormalities_type_classificator.ipynb
+++ b/YOLOv8/abnormalities_type_classificator/yolo_v8_abnormalities_type_classificator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-03T15:53:49.345145Z",
@@ -14,16 +14,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33medcogue\u001b[0m (\u001b[33medcogue2207\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -34,13 +24,9 @@
    "source": [
     "import torch\n",
     "import os\n",
-    "import wandb\n",
     "from IPython.display import Image, clear_output  # to display images\n",
     "from hyperopt import fmin, tpe, hp, Trials\n",
     "from ultralytics import YOLO\n",
-    "#wandb_api_key = user_secrets.get_secret(\"wandb_key\")\n",
-    "#wandb.login(key=wandb_api_key)\n",
-    "wandb.login(key=\"6227e72bb3b48dc12a4035210349fec6a2b3637b\")\n",
     "\n",
     "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
    ]
@@ -169,18 +155,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.0.109 🚀 Python-3.8.10 torch-2.0.1+cu117 CUDA:0 (NVIDIA GeForce GTX 1660 Ti, 5945MiB)\n",
+      "\u001b[34m\u001b[1myolo/engine/trainer: \u001b[0mtask=classify, mode=train, model=yolov8n-cls.pt, data=/tf/data/Mammographies/yolo_data/abnormality_classification, epochs=1, patience=50, batch=2, imgsz=300, save=True, save_period=-1, cache=False, device=None, workers=8, project=None, name=None, exist_ok=False, pretrained=False, optimizer=SGD, verbose=True, seed=0, deterministic=True, single_cls=False, rect=False, cos_lr=False, close_mosaic=0, resume=False, amp=True, overlap_mask=True, mask_ratio=4, dropout=0.2, val=True, split=val, save_json=False, save_hybrid=False, conf=None, iou=0.7, max_det=300, half=False, dnn=False, plots=True, source=None, show=False, save_txt=False, save_conf=False, save_crop=False, show_labels=True, show_conf=True, vid_stride=1, line_width=None, visualize=False, augment=True, agnostic_nms=False, classes=None, retina_masks=False, boxes=True, format=torchscript, keras=False, optimize=False, int8=False, dynamic=False, simplify=False, opset=None, workspace=4, nms=False, lr0=0.03, lrf=0.01, momentum=0.937, weight_decay=0.0005, warmup_epochs=3.0, warmup_momentum=0.8, warmup_bias_lr=0.1, box=7.5, cls=0.5, dfl=1.5, pose=12.0, kobj=1.0, label_smoothing=0.0, nbs=64, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, degrees=0.0, translate=0.1, scale=0.5, shear=0.0, perspective=0.0, flipud=0.0, fliplr=0.5, mosaic=1.0, mixup=0.0, copy_paste=0.0, cfg=None, v5loader=False, tracker=botsort.yaml, save_dir=runs/classify/train3\n",
+      "Overriding model.yaml nc=1000 with nc=7\n",
+      "\n",
+      "                   from  n    params  module                                       arguments                     \n",
+      "  0                  -1  1       464  ultralytics.nn.modules.conv.Conv             [3, 16, 3, 2]                 \n",
+      "  1                  -1  1      4672  ultralytics.nn.modules.conv.Conv             [16, 32, 3, 2]                \n",
+      "  2                  -1  1      7360  ultralytics.nn.modules.block.C2f             [32, 32, 1, True]             \n",
+      "  3                  -1  1     18560  ultralytics.nn.modules.conv.Conv             [32, 64, 3, 2]                \n",
+      "  4                  -1  2     49664  ultralytics.nn.modules.block.C2f             [64, 64, 2, True]             \n",
+      "  5                  -1  1     73984  ultralytics.nn.modules.conv.Conv             [64, 128, 3, 2]               \n",
+      "  6                  -1  2    197632  ultralytics.nn.modules.block.C2f             [128, 128, 2, True]           \n",
+      "  7                  -1  1    295424  ultralytics.nn.modules.conv.Conv             [128, 256, 3, 2]              \n",
+      "  8                  -1  1    460288  ultralytics.nn.modules.block.C2f             [256, 256, 1, True]           \n",
+      "  9                  -1  1    339207  ultralytics.nn.modules.head.Classify         [256, 7]                      \n",
+      "YOLOv8n-cls summary: 99 layers, 1447255 parameters, 1447255 gradients\n",
+      "Transferred 156/158 items from pretrained weights\n",
+      "\u001b[34m\u001b[1mTensorBoard: \u001b[0mStart with 'tensorboard --logdir runs/classify/train3', view at http://localhost:6006/\n",
+      "\u001b[34m\u001b[1mAMP: \u001b[0mrunning Automatic Mixed Precision (AMP) checks with YOLOv8n...\n",
+      "\u001b[34m\u001b[1mAMP: \u001b[0mchecks passed ✅\n",
+      "WARNING ⚠️ imgsz=[300] must be multiple of max stride 32, updating to [320]\n",
+      "\u001b[34m\u001b[1moptimizer:\u001b[0m SGD(lr=0.03) with parameter groups 26 weight(decay=0.0), 27 weight(decay=0.0005), 27 bias\n",
+      "\u001b[34m\u001b[1malbumentations: \u001b[0mRandomResizedCrop(p=1.0, height=320, width=320, scale=(0.5, 1.0), ratio=(0.75, 1.3333333333333333), interpolation=1), HorizontalFlip(p=0.5), ColorJitter(p=0.5, brightness=[0.6, 1.4], contrast=[0.6, 1.4], saturation=[0.30000000000000004, 1.7], hue=[-0.015, 0.015]), Normalize(p=1.0, mean=(0.0, 0.0, 0.0), std=(1.0, 1.0, 1.0), max_pixel_value=255.0), ToTensorV2(always_apply=True, p=1.0, transpose_mask=False)\n",
+      "Image sizes 320 train, 320 val\n",
+      "Using 2 dataloader workers\n",
+      "Logging results to \u001b[1mruns/classify/train3\u001b[0m\n",
+      "Starting training for 1 epochs...\n",
+      "\n",
+      "      Epoch    GPU_mem       loss  Instances       Size\n",
+      "        1/1     0.189G    0.01826          2        320: 100%|██████████| 3829/3829 [01:23<00:00, 45.62it/s]\n",
+      "               classes   top1_acc   top5_acc: 100%|██████████| 557/557 [00:05<00:00, 99.97it/s] \n",
+      "                   all      0.598      0.996\n",
+      "\n",
+      "1 epochs completed in 0.025 hours.\n",
+      "Optimizer stripped from runs/classify/train3/weights/last.pt, 3.0MB\n",
+      "Optimizer stripped from runs/classify/train3/weights/best.pt, 3.0MB\n",
+      "Results saved to \u001b[1mruns/classify/train3\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Define el modelo con los parámetros dados\n",
     "model = YOLO('yolov8n-cls.pt')\n",
@@ -192,14 +213,27 @@
     "            lr0=best[\"lr\"],                \n",
     "            batch=2,\n",
     "            augment=True,\n",
-    "            imgsz=300)"
+    "            imgsz=320)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.0.109 🚀 Python-3.8.10 torch-2.0.1+cu117 CUDA:0 (NVIDIA GeForce GTX 1660 Ti, 5945MiB)\n",
+      "YOLOv8n-cls summary (fused): 73 layers, 1443847 parameters, 0 gradients\n",
+      "               classes   top1_acc   top5_acc: 100%|██████████| 1113/1113 [00:04<00:00, 257.11it/s]\n",
+      "                   all      0.598      0.996\n",
+      "Speed: 0.1ms preprocess, 1.6ms inference, 0.0ms loss, 0.0ms postprocess per image\n",
+      "Results saved to \u001b[1mruns/classify/val\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Evalúa el modelo\n",
     "metrics = model.val()"
@@ -207,20 +241,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ultralytics.yolo.utils.metrics.ClassifyMetrics object with attributes:\n",
+       "\n",
+       "confusion_matrix: <ultralytics.yolo.utils.metrics.ConfusionMatrix object at 0x7ff582b0d940>\n",
+       "fitness: 0.9955056309700012\n",
+       "keys: ['metrics/accuracy_top1', 'metrics/accuracy_top5']\n",
+       "results_dict: {'metrics/accuracy_top1': 0.5977528095245361, 'metrics/accuracy_top5': 0.9955056309700012, 'fitness': 0.9955056309700012}\n",
+       "speed: {'preprocess': 0.1463603973388672, 'inference': 1.584939742356204, 'loss': 0.006503844529055477, 'postprocess': 0.006183345666092434}\n",
+       "top1: 0.5977528095245361\n",
+       "top5: 0.9955056309700012"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.0.109 🚀 Python-3.8.10 torch-2.0.1+cu117 CPU\n",
+      "\n",
+      "\u001b[34m\u001b[1mPyTorch:\u001b[0m starting from runs/classify/train3/weights/best.pt with input shape (2, 3, 320, 320) BCHW and output shape(s) (2, 7) (2.8 MB)\n",
+      "\n",
+      "\u001b[34m\u001b[1mTorchScript:\u001b[0m starting export with torch 2.0.1+cu117...\n",
+      "\u001b[34m\u001b[1mTorchScript:\u001b[0m export success ✅ 0.6s, saved as runs/classify/train3/weights/best.torchscript (5.6 MB)\n",
+      "\n",
+      "Export complete (0.7s)\n",
+      "Results saved to \u001b[1m/tf/code/YOLOv8/abnormalities_type_classificator/runs/classify/train3/weights\u001b[0m\n",
+      "Predict:         yolo predict task=classify model=runs/classify/train3/weights/best.torchscript imgsz=320 \n",
+      "Validate:        yolo val task=classify model=runs/classify/train3/weights/best.torchscript imgsz=320 data=/tf/data/Mammographies/yolo_data/abnormality_classification \n",
+      "Visualize:       https://netron.app\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'runs/classify/train3/weights/best.torchscript'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.export()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 320x320 Calcification 0.57, Mass 0.40, Cluster 0.01, Assymetry 0.01, Distortion 0.01, 2.1ms\n",
+      "Speed: 1.2ms preprocess, 2.1ms inference, 0.0ms postprocess per image at shape (1, 3, 320, 320)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0075722625479102135, 0.5659735202789307, 0.0076529704965651035, 0.007340975105762482, 0.3993372321128845, 0.00685231015086174, 0.005270735826343298]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'Assymetry',\n",
+       " 1: 'Calcification',\n",
+       " 2: 'Cluster',\n",
+       " 3: 'Distortion',\n",
+       " 4: 'Mass',\n",
+       " 5: 'Spiculated Region',\n",
+       " 6: 'Unknown'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "model_load=YOLO(\"./runs/classify/train3/weights/best.pt\")\n",
+    "image=Image.open(f\"/tf/data/Mammographies/yolo_data/abnormality_classification/train/Distortion/2.png\").convert(\"RGB\")\n",
+    "results=model_load(image)[0] #Saved on runs/detect/predict\n",
+    "print(results.probs.data.tolist())\n",
+    "results.names"
    ]
   }
  ],
