Only allow to resize image to square shapes

--- a/data_augmentation/Conditional GAN Mammographies.ipynb
+++ b/data_augmentation/Conditional GAN Mammographies.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "dataset = tf.data.Dataset.from_generator(loader.classification_generator(output_size=(image_size,image_size),\n",
+    "dataset = tf.data.Dataset.from_generator(loader.classification_generator(output_size=image_size,\n",
     "                                                                         classify_types=True,\n",
     "                                                                         types_as=\"hot_encode\"\n",
     "                                                                        ),\n",
