--- a/generate_data/generate_yolo_data.ipynb
+++ b/generate_data/generate_yolo_data.ipynb
@@ -7484,7 +7484,7 @@
     "loader = DataLoader()\n",
     "\n",
     "counter_labels = defaultdict(int)\n",
-    "class_generator= loader.classification_generator(output_size=(300,300))\n",
+    "class_generator= loader.classification_generator(output_size=300)\n",
     "counter=0\n",
     "for image, label in class_generator():\n",
     "    type_set = np.random.choice([\"train\", \"val\", \"test\"], p=[0.7, 0.2, 0.1])\n",
@@ -7568,7 +7568,7 @@
    "source": [
     "CLASS_YOLO_BASE_DIR=\"/kaggle/working/yolo_data/abnormality_classification\"\n",
     "\n",
-    "class_gen = loader.classification_generator(output_size=(400,400), classify_types=True)\n",
+    "class_gen = loader.classification_generator(output_size=400, classify_types=True)\n",
     "\n",
     "counter_types = defaultdict(int)\n",
     "counter=0\n",
