--- a/vit-classification/vit_classification-hugging-face.ipynb
+++ b/vit-classification/vit_classification-hugging-face.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "\n",
     "dataset = Dataset.from_generator(loader.classification_generator(target_library=\"hugging_face\",\n",
-    "                                                                 output_size=(400,400)),\n",
+    "                                                                 output_size=400),\n",
     "                                 features=features,\n",
     "                                 cache_dir=\"./dataset_class_cache\",\n",
     "                                 )\n"
